// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@xstate/graph getPathFromEvents() should return a path to the last entered state by the event sequence: path from events 1`] = `
{
  "state": {
    "red": "flashing",
  },
  "steps": [
    {
      "eventType": "TIMER",
      "state": "green",
    },
    {
      "eventType": "TIMER",
      "state": "yellow",
    },
    {
      "eventType": "TIMER",
      "state": {
        "red": "walk",
      },
    },
    {
      "eventType": "POWER_OUTAGE",
      "state": "green",
    },
  ],
}
`;

exports[`@xstate/graph getShortestPaths() should return a mapping of shortest paths to all states (parallel): shortest paths parallel 1`] = `
[
  {
    "state": {
      "a": "a1",
      "b": "b1",
    },
    "steps": [],
  },
  {
    "state": {
      "a": "a2",
      "b": "b2",
    },
    "steps": [
      {
        "eventType": "2",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a3",
      "b": "b3",
    },
    "steps": [
      {
        "eventType": "3",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getShortestPaths() should return a mapping of shortest paths to all states: shortest paths 1`] = `
[
  {
    "state": "green",
    "steps": [],
  },
  {
    "state": "yellow",
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "POWER_OUTAGE",
        "state": "green",
      },
    ],
  },
  {
    "state": {
      "red": "walk",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
    ],
  },
  {
    "state": {
      "red": "wait",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "walk",
        },
      },
    ],
  },
  {
    "state": {
      "red": "stop",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return a mapping of arrays of simple paths to all states 2`] = `
[
  {
    "state": "green",
    "steps": [],
  },
  {
    "state": "yellow",
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "walk",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "wait",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "stop",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": "yellow",
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "POWER_OUTAGE",
        "state": "green",
      },
    ],
  },
  {
    "state": {
      "red": "walk",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
    ],
  },
  {
    "state": {
      "red": "wait",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "walk",
        },
      },
    ],
  },
  {
    "state": {
      "red": "stop",
    },
    "steps": [
      {
        "eventType": "TIMER",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return a mapping of simple paths to all states (parallel): simple paths parallel 1`] = `
[
  {
    "state": {
      "a": "a1",
      "b": "b1",
    },
    "steps": [],
  },
  {
    "state": {
      "a": "a2",
      "b": "b2",
    },
    "steps": [
      {
        "eventType": "2",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a3",
      "b": "b3",
    },
    "steps": [
      {
        "eventType": "2",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
      {
        "eventType": "3",
        "state": {
          "a": "a2",
          "b": "b2",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a3",
      "b": "b3",
    },
    "steps": [
      {
        "eventType": "3",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return multiple paths for equivalent transitions: simple paths equal transitions 1`] = `
[
  {
    "state": "a",
    "steps": [],
  },
  {
    "state": "b",
    "steps": [
      {
        "eventType": "FOO",
        "state": "a",
      },
    ],
  },
  {
    "state": "b",
    "steps": [
      {
        "eventType": "BAR",
        "state": "a",
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return value-based paths: simple paths context 1`] = `
[
  {
    "state": "start",
    "steps": [],
  },
  {
    "state": "start",
    "steps": [
      {
        "eventType": "INC",
        "state": "start",
      },
    ],
  },
  {
    "state": "start",
    "steps": [
      {
        "eventType": "INC",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
    ],
  },
  {
    "state": "finish",
    "steps": [
      {
        "eventType": "INC",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
    ],
  },
]
`;

exports[`@xstate/graph toDirectedGraph should represent a statechart as a directed graph 1`] = `
{
  "children": [
    {
      "children": [],
      "edges": [
        {
          "label": {
            "text": "TIMER",
          },
          "source": "light.green",
          "target": "light.yellow",
        },
      ],
      "id": "light.green",
    },
    {
      "children": [],
      "edges": [
        {
          "label": {
            "text": "TIMER",
          },
          "source": "light.yellow",
          "target": "light.red",
        },
      ],
      "id": "light.yellow",
    },
    {
      "children": [
        {
          "children": [],
          "edges": [
            {
              "label": {
                "text": "COUNTDOWN",
              },
              "source": "light.red.walk",
              "target": "light.red.wait",
            },
          ],
          "id": "light.red.walk",
        },
        {
          "children": [],
          "edges": [
            {
              "label": {
                "text": "COUNTDOWN",
              },
              "source": "light.red.wait",
              "target": "light.red.stop",
            },
          ],
          "id": "light.red.wait",
        },
        {
          "children": [],
          "edges": [
            {
              "label": {
                "text": "COUNTDOWN",
              },
              "source": "light.red.stop",
              "target": "light.red.finished",
            },
          ],
          "id": "light.red.stop",
        },
        {
          "children": [],
          "edges": [],
          "id": "light.red.finished",
        },
      ],
      "edges": [
        {
          "label": {
            "text": "done.state.light.red",
          },
          "source": "light.red",
          "target": "light.green",
        },
      ],
      "id": "light.red",
    },
  ],
  "edges": [],
  "id": "light",
}
`;

exports[`shortest paths for transition functions 1`] = `
[
  {
    "state": 0,
    "steps": [],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
      {
        "eventType": "reset",
        "state": 2,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
      {
        "eventType": "reset",
        "state": 2,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 1,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
      {
        "eventType": "reset",
        "state": 2,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 1,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
    ],
  },
]
`;

exports[`simple paths for transition functions 1`] = `
[
  {
    "state": 0,
    "steps": [],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "a",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 1,
      },
    ],
  },
]
`;
